7044738: Loop unroll optimization causes incorrect result

Take into account memory dependencies when clonning nodes in clone_up_backedge_goo().

Reviewed-by: never